Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/8157149/T8157149a.out
T8157149a.java:19:28: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.IOException
T8157149a.java:26:28: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.IOException
2 errors
